--- a/trainerly-packages/trainerly-coach-app/src/components/ProfileModal.css
+++ b/trainerly-packages/trainerly-coach-app/src/components/ProfileModal.css
@@ -52,7 +52,7 @@
   width: 100%;
 }
 
-.input-icon {
+.profile-modal .input-icon {
   position: absolute;
   left: var(--space-4); /* Icon on the left side for RTL */
   top: 50%;
@@ -65,7 +65,7 @@
 }
 
 /* Phone input icon should be on the right since phone number input is RTL */
-.phone-number-input .input-icon {
+.profile-modal .phone-number-input .input-icon {
   right: var(--space-4);
   left: auto;
 }
@@ -287,7 +287,7 @@
     padding: var(--space-3) var(--space-10) var(--space-3) var(--space-3) !important; /* Updated for RTL phone input */
   }
 
-  .input-icon {
+  .profile-modal .input-icon {
     left: var(--space-3);
     font-size: var(--font-size-base);
   }
